configmap-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: configmap-file-demo

spec:
  containers:
    - name: app
      image: busybox:1.36

      command:
        - sh
        - -c
        - "cat /config/app-settings; sleep 3600"

      volumeMounts:
        - name: config-volume
          mountPath: /config

  volumes:
    - name: config-volume
      configMap:
        name: app-config
