secret-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: secret-demo

spec:
  containers:
    - name: app
      image: busybox:1.36

      command:
        - sh
        - -c
        - "echo Username: $DB_USERNAME; echo Password: $DB_PASSWORD; sleep 3600"

      env:
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              name: db-secret
              key: DB_USERNAME

        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: db-secret
              key: DB_PASSWORD
