storage-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: storage-demo

spec:
  containers:
    - name: app
      image: busybox:1.36

      command:
        - sh
        - -c
        - "echo 'Hello Kubernetes Storage' > /data/message.txt; sleep 3600"

      volumeMounts:
        - name: app-storage
          mountPath: /data

  volumes:
    - name: app-storage
      persistentVolumeClaim:
        claimName: app-storage
